--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,5 +6,7 @@
 @import "../styles/modules/blocks/fotoCourse/fotoCourse.scss";
 @import "../styles/modules/blocks/studyComposition/studyComposition.scss";
 @import "../styles/modules/blocks/camera/camera.scss";
+@import "../styles/modules/blocks/searchingOrders/searchingOrders.scss";
+@import "../styles/modules/blocks/singUp/singUp.scss"
 // @import "";
 // @import "";
