--- a/styles/modules/blocks/camera/camera.css
+++ b/styles/modules/blocks/camera/camera.css
@@ -4,7 +4,7 @@
   width: 100%;
   background-color: #000000;
   display: grid;
-  grid-template-areas: "blockName foto" "title foto" "link foto" "feedback feedback";
+  grid-template-areas: "blockName foto" "title foto" "link foto" "feedback1 feedback2" "name1 name2" "mail1 mail2";
 }
 .camera__blockName {
   margin: 50px 0 50px 54px;
@@ -42,16 +42,6 @@
   padding: 0;
   grid-area: foto;
 }
-.camera__feedback-1 {
-  margin: 0;
-  padding: 0;
-  max-width: 692px;
-}
-.camera__feedback-2 {
-  margin: 0;
-  padding: 0;
-  max-width: 692px;
-}
 .camera__feedbackText {
   margin: 0 0 60px 50px;
   padding: 0;
@@ -59,24 +49,46 @@
   font-size: 43px;
   line-height: 43.2px;
   color: #FFFFFF;
-  grid-area: feedback;
-  max-width: 748px;
 }
-.camera__feddbackName {
+.camera__feedbackText_1 {
+  margin: 0 172px 60px 50px;
+  padding: 0;
+  max-width: 526px;
+  grid-area: feedback1;
+}
+.camera__feedbackText_2 {
+  margin: 0 auto 60px 0;
+  padding: 0;
+  max-width: 497px;
+  grid-area: feedback2;
+}
+.camera__feedbackName {
   margin: 0 0 10px 50px;
   padding: 0;
   font-family: "Roboto_regular";
   font-size: 18px;
   line-height: 28px;
   color: #FFFFFF;
-  grid-area: feedback;
 }
-.camera__feddbackMail {
+.camera__feedbackName_1 {
+  grid-area: name1;
+}
+.camera__feedbackName_2 {
+  margin-left: 0;
+  grid-area: name2;
+}
+.camera__feedbackMail {
   margin: 0 0 50px 50px;
   padding: 0;
   font-family: "Roboto_regular";
   font-size: 14px;
   line-height: 24px;
   color: #FFFFFF;
-  grid-area: feedback;
+}
+.camera__feedbackMail_1 {
+  grid-area: mail1;
+}
+.camera__feedbackMail_2 {
+  grid-area: mail2;
+  margin-left: 0;
 }/*# sourceMappingURL=camera.css.map */
