--- a/styles/modules/blocks/header/header.css
+++ b/styles/modules/blocks/header/header.css
@@ -22,15 +22,24 @@
   align-items: center;
   align-content: center;
 }
+.header__links {
+  list-style: none;
+  list-style-type: none;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+  margin-right: 40px;
+  color: #FFFFFF;
+}
 .header__link {
   font-family: "Roboto_regular";
   font-size: 16px;
-  margin-right: 40px;
-  color: #FFFFFF;
+  line-height: 100%;
 }
 .header__link:hover {
   font-family: "Roboto_bold";
   font-size: 16px;
+  line-height: 100%;
 }
 .header__link:last-of-type {
   margin-right: 50px;
