--- a/styles/style.css
+++ b/styles/style.css
@@ -35,12 +35,19 @@
   align-items: center;
   align-content: center;
 }
+.header__links {
+  list-style: none;
+  list-style-type: none;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+  margin-right: 40px;
+  color: #FFFFFF;
+}
 .header__link {
   font-family: "Roboto_regular";
   font-size: 16px;
   line-height: 100%;
-  margin-right: 40px;
-  color: #FFFFFF;
 }
 .header__link:hover {
   font-family: "Roboto_bold";
@@ -244,7 +251,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: top;
   align-content: center;
   grid-area: rules;
 }
@@ -269,7 +276,7 @@
   width: 100%;
   background-color: #000000;
   display: grid;
-  grid-template-areas: "blockName foto" "title foto" "link foto" "feedback feedback";
+  grid-template-areas: "blockName foto" "title foto" "link foto" "feedback1 feedback2" "name1 name2" "mail1 mail2";
 }
 .camera__blockName {
   margin: 50px 0 50px 54px;
@@ -307,16 +314,6 @@
   padding: 0;
   grid-area: foto;
 }
-.camera__feedback-1 {
-  margin: 0;
-  padding: 0;
-  max-width: 692px;
-}
-.camera__feedback-2 {
-  margin: 0;
-  padding: 0;
-  max-width: 692px;
-}
 .camera__feedbackText {
   margin: 0 0 60px 50px;
   padding: 0;
@@ -324,24 +321,226 @@
   font-size: 43px;
   line-height: 43.2px;
   color: #FFFFFF;
-  grid-area: feedback;
-  max-width: 748px;
 }
-.camera__feddbackName {
+.camera__feedbackText_1 {
+  margin: 0 172px 60px 50px;
+  padding: 0;
+  max-width: 526px;
+  grid-area: feedback1;
+}
+.camera__feedbackText_2 {
+  margin: 0 auto 60px 0;
+  padding: 0;
+  max-width: 497px;
+  grid-area: feedback2;
+}
+.camera__feedbackName {
   margin: 0 0 10px 50px;
   padding: 0;
   font-family: "Roboto_regular";
   font-size: 18px;
   line-height: 28px;
   color: #FFFFFF;
-  grid-area: feedback;
 }
-.camera__feddbackMail {
+.camera__feedbackName_1 {
+  grid-area: name1;
+}
+.camera__feedbackName_2 {
+  margin-left: 0;
+  grid-area: name2;
+}
+.camera__feedbackMail {
   margin: 0 0 50px 50px;
   padding: 0;
   font-family: "Roboto_regular";
   font-size: 14px;
   line-height: 24px;
   color: #FFFFFF;
-  grid-area: feedback;
+}
+.camera__feedbackMail_1 {
+  grid-area: mail1;
+}
+.camera__feedbackMail_2 {
+  grid-area: mail2;
+  margin-left: 0;
+}
+
+.searchingOrders {
+  margin: 0;
+  padding: 0 0 50px 0;
+  width: 100%;
+  background-color: #FFFFFF;
+  display: grid;
+  grid-template-areas: "blockName text1" "title text1" "foto text1" "foto button";
+}
+.searchingOrders__blockName {
+  margin: 50px 0 50px 54px;
+  padding: 0;
+  font-family: "Roboto_regular";
+  font-size: 18px;
+  line-height: 28px;
+  grid-area: blockName;
+  color: #000000;
+  text-transform: uppercase;
+}
+.searchingOrders__title {
+  margin: 0 292px 106px 50px;
+  padding: 0;
+  font-family: "Roboto_regular";
+  font-size: 64px;
+  line-height: 64px;
+  max-width: 549px;
+  grid-area: title;
+  color: #000000;
+}
+.searchingOrders__foto {
+  margin: 0 auto 0 50px;
+  padding: 0;
+  grid-area: foto;
+}
+.searchingOrders__text {
+  margin: 386px 50px 148px 0;
+  padding: 0;
+  font-family: "Roboto_regular";
+  font-size: 18px;
+  line-height: 28px;
+  color: #000000;
+  align-self: flex-end;
+  justify-self: flex-end;
+  grid-area: text1;
+  width: 380px;
+}
+.searchingOrders__button {
+  margin: 0 202px 0 0;
+  padding: 0;
+  list-style: none;
+  list-style-type: none;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+  font-family: "Roboto_regular";
+  font-size: 18px;
+  line-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  line-height: 133%;
+  grid-area: button;
+  color: #000000;
+  background-color: #FFFFFF;
+  width: 228px;
+  height: 49px;
+  border: 1px solid #000000;
+  border-radius: 24.5px;
+  grid-area: button;
+  justify-self: flex-end;
+}
+.searchingOrders__button:hover {
+  font-family: "Roboto_bold";
+  font-size: 18px;
+  line-height: 28px;
+}
+
+.singUp {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background-color: #DF2626;
+}
+.singUp__callToAction {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: center;
+  width: 100%;
+}
+.singUp__arrow {
+  margin: 60px 50px 0 50px;
+  padding: 0;
+  width: 129px;
+  height: 95px;
+}
+.singUp__h2 {
+  margin: 50px 0 120px 0;
+  padding: 0;
+  font-family: "Roboto_regular";
+  font-size: 120px;
+  line-height: 120px;
+  max-width: 685px;
+  color: #FFFFFF;
+}
+.singUp__inputs {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  align-content: center;
+  width: 100%;
+}
+.singUp__input {
+  margin: 0 0 86px 234px;
+  padding: 0;
+  padding-left: 20px;
+  width: 348px;
+  height: 46px;
+  border: 2px solid #000000;
+  border-radius: 8px 0 0 8px;
+  -webkit-border-radius: 8px 0 0 8px;
+  -moz-border-radius: 8px 0 0 8px;
+  -khtml-border-radius: 8px 0 0 8px;
+  background: #FFFFFF !important;
+  outline: none;
+  color: #000000;
+  font-family: "Roboto_regular";
+  font-size: 14px;
+  line-height: 24px;
+}
+.singUp__button {
+  margin: 0 auto 0 0;
+  padding: 0;
+  list-style: none;
+  list-style-type: none;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+  font-family: "Roboto_regular";
+  font-size: 14px;
+  line-height: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  line-height: 133%;
+  grid-area: button;
+  color: #000000;
+  background-color: #FFFFFF;
+  width: 228px;
+  height: 49px;
+  border: 1px solid #000000;
+  border-radius: 24.5px;
+  border: 2px solid #000000;
+  border-radius: 0 8px 8px 0;
+  border-left: none;
+  height: 50px;
+}
+.singUp__button:hover {
+  font-family: "Roboto_bold";
+  font-size: 18px;
+  line-height: 28px;
+}
+.singUp__since {
+  margin: 0 auto 50px 50px;
+  padding: 0;
+  font-family: "Roboto_regular";
+  font-size: 15px;
+  line-height: 24px;
+  color: #FFFFFF;
 }/*# sourceMappingURL=style.css.map */
