--- a/styles/modules/blocks/studyComposition/studyComposition.css
+++ b/styles/modules/blocks/studyComposition/studyComposition.css
@@ -1,10 +1,20 @@
 .studyComposition {
   margin: 0;
   padding: 0;
-  width: 100%;
+  max-width: 100%;
   background-color: #FFCE00;
   display: grid;
   grid-template-areas: "blockName foto" "title foto" "text_1 foto" "text_2 foto" "button foto" "rules rules";
+}
+@media (max-width: 1440px) {
+  .studyComposition {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+    max-width: 100%;
+  }
 }
 .studyComposition__blockName {
   margin: 50px 0 50px 54px;
@@ -25,6 +35,12 @@
   max-width: 400px;
   grid-area: title;
   color: #000000;
+}
+@media (max-width: 1440px) {
+  .studyComposition__title {
+    max-width: 624px;
+    margin: 40px auto 60px 38px;
+  }
 }
 .studyComposition__text {
   margin: 0 0 20px 54px;
@@ -47,6 +63,12 @@
   cursor: pointer;
   color: #000000;
 }
+@media (max-width: 1440px) {
+  .studyComposition__text {
+    max-width: 400px;
+    margin: 0 auto 20px 44px;
+  }
+}
 .studyComposition__text_2 {
   margin: 0 0 198px 54px;
   padding: 0;
@@ -56,6 +78,12 @@
   color: #000000;
   grid-area: text_2;
   max-width: 400px;
+}
+@media (max-width: 1440px) {
+  .studyComposition__text_2 {
+    max-width: 400px;
+    margin: 0 auto 60px 44px;
+  }
 }
 .studyComposition__button {
   margin: 0 0 0 50px;
@@ -88,10 +116,22 @@
   font-size: 18px;
   line-height: 28px;
 }
+@media (max-width: 1440px) {
+  .studyComposition__button {
+    max-width: 100%;
+    margin: 0 auto 50px 40px;
+  }
+}
 .studyComposition__foto {
   margin: 50px 50px 50px 0;
   padding: 0;
   grid-area: foto;
+}
+@media (max-width: 1440px) {
+  .studyComposition__foto {
+    max-width: 90%;
+    margin: 0 40px 60px 40px;
+  }
 }
 .studyComposition__rules {
   margin: 100px 54px 50px 54px;
@@ -102,6 +142,17 @@
   align-items: top;
   align-content: center;
   grid-area: rules;
+}
+@media (max-width: 1440px) {
+  .studyComposition__rules {
+    max-width: 100%;
+    margin: 0 40px 40px 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+  }
 }
 .studyComposition__compositionRule {
   margin: 0;
@@ -116,4 +167,16 @@
   text-decoration: none;
   cursor: pointer;
   cursor: none;
+}
+@media (max-width: 1440px) {
+  .studyComposition__compositionRule {
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-bottom: #000000 solid 1px;
+  }
+  .studyComposition__compositionRule:last-of-type {
+    margin-bottom: 40px;
+    border-bottom: none;
+  }
 }/*# sourceMappingURL=studyComposition.css.map */
