--- a/styles/modules/blocks/page/page.css
+++ b/styles/modules/blocks/page/page.css
@@ -8,4 +8,9 @@
   align-content: center;
   max-width: 1440px;
   background-color: #FFFFFF;
+}
+@media (max-width: 1440px) {
+  .page {
+    max-width: 100%;
+  }
 }/*# sourceMappingURL=page.css.map */
