--- a/styles/modules/blocks/page/page.scss
+++ b/styles/modules/blocks/page/page.scss
@@ -6,4 +6,7 @@
     @include flex;
     max-width: 1440px;
     background-color: #FFFFFF;
+    @include screen1440px{
+        max-width: 100%;
+    }
 }
