--- a/styles/modules/blocks/studyComposition/studyComposition.scss
+++ b/styles/modules/blocks/studyComposition/studyComposition.scss
@@ -3,7 +3,7 @@
 
 .studyComposition {
   @include MarginPadding;
-  width: 100%;
+  max-width: 100%;
   background-color: $yellowColor;
   display: grid;
   grid-template-areas:
@@ -13,6 +13,15 @@
     "text_2 foto"
     "button foto"
     "rules rules";
+  @include screen1440px {
+    @include flex(
+      $direction: column,
+      $justify: flex-start,
+      $alignItems: center,
+      $alignContent: center
+    );
+    max-width: 100%;
+  }
 
   &__blockName {
     @include MarginPadding($margin: 50px 0 50px 54px);
@@ -27,6 +36,10 @@
     max-width: 400px;
     grid-area: title;
     color: $blackColor;
+    @include screen1440px {
+      max-width: 624px;
+      margin: 40px auto 60px 38px;
+    }
   }
   &__text {
     @include MarginPadding($margin: 0 0 20px 54px);
@@ -38,7 +51,10 @@
       @include fontBold(18px, 28px);
       @include elementsNoStyles;
       color: $blackColor;
-
+    }
+    @include screen1440px {
+      max-width: 400px;
+      margin: 0 auto 20px 44px;
     }
   }
   &__text_2 {
@@ -47,6 +63,10 @@
     color: $blackColor;
     grid-area: text_2;
     max-width: 400px;
+    @include screen1440px {
+      max-width: 400px;
+      margin: 0 auto 60px 44px;
+    }
   }
   &__button {
     @include MarginPadding($margin: 0 0 0 50px);
@@ -55,23 +75,45 @@
     @include flex($justify: center, $alignItems: center);
     @include buttonDesctopStyle;
     grid-area: button;
+    @include screen1440px {
+      max-width: 100%;
+      margin: 0 auto 50px 40px;
+    }
   }
   &__foto {
     @include MarginPadding($margin: 50px 50px 50px 0);
     grid-area: foto;
+    @include screen1440px {
+      max-width: 90%;
+      margin: 0 40px 60px 40px;
+    }
   }
 
-
-  &__rules{
+  &__rules {
     @include MarginPadding($margin: 100px 54px 50px 54px);
     @include flex($direction: row, $justify: space-between, $alignItems: top);
     grid-area: rules;
+    @include screen1440px {
+      max-width: 100%;
+      margin: 0 40px 40px 40px;
+      @include flex($direction: column, $justify: flex-start, $alignItems: center);
+    }
   }
-  &__compositionRule{
+  &__compositionRule {
     @include MarginPadding;
     width: 291px;
     @include fontRegular(18px, 28px);
     @include elementsNoStyles;
     cursor: none;
+    @include screen1440px {
+      width: 100%;
+      margin-top: 30px;
+      margin-bottom: 30px;
+      border-bottom: #000000 solid 1px;
+      &:last-of-type{
+        margin-bottom: 40px;
+        border-bottom: none;
+      }
+    }
   }
 }
