--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,6 +7,6 @@
 @import "../styles/modules/blocks/studyComposition/studyComposition.scss";
 @import "../styles/modules/blocks/camera/camera.scss";
 @import "../styles/modules/blocks/searchingOrders/searchingOrders.scss";
-@import "../styles/modules/blocks/singUp/singUp.scss"
+@import "../styles/modules/blocks/singUp/singUp.scss";
 // @import "";
 // @import "";
