--- a/styles/modules/blocks/page/page.css
+++ b/styles/modules/blocks/page/page.css
@@ -12,5 +12,6 @@
 @media (max-width: 1440px) {
   .page {
     max-width: 100%;
+    align-items: stretch;
   }
 }/*# sourceMappingURL=page.css.map */
