--- a/styles/modules/blocks/searchingOrders/searchingOrders.scss
+++ b/styles/modules/blocks/searchingOrders/searchingOrders.scss
@@ -2,7 +2,7 @@
 @import "../../mixins/mixins.scss";
 
 .searchingOrders {
-  @include MarginPadding ($padding: 0 0 50px 0);;
+  @include MarginPadding($padding: 0 0 50px 0);
   width: 100%;
   background-color: $whiteColor;
   display: grid;
@@ -11,6 +11,9 @@
     "title text1"
     "foto text1"
     "foto button";
+  @include screen1440px {
+    @include tableSectionFlex;
+  }
 
   &__blockName {
     @include MarginPadding($margin: 50px 0 50px 54px);
@@ -18,6 +21,9 @@
     grid-area: blockName;
     color: $blackColor;
     text-transform: uppercase;
+    @include screen1440px {
+      @include tabletBlockName;
+    }
   }
   &__title {
     @include MarginPadding($margin: 0 292px 106px 50px);
@@ -25,10 +31,16 @@
     max-width: 549px;
     grid-area: title;
     color: $blackColor;
+    @include screen1440px {
+      @include tabletTitle;
+    }
   }
   &__foto {
     @include MarginPadding($margin: 0 auto 0 50px);
     grid-area: foto;
+    @include screen1440px {
+      @include tabletFoto;
+    }
   }
   &__text {
     @include MarginPadding($margin: 386px 50px 148px 0);
@@ -37,7 +49,10 @@
     align-self: flex-end;
     justify-self: flex-end;
     grid-area: text1;
-    width: 380px;
+    max-width: 380px;
+    @include screen1440px {
+      @include tableText;
+    }
   }
   &__button {
     @include MarginPadding($margin: 0 202px 0 0);
@@ -47,5 +62,8 @@
     @include buttonDesctopStyle;
     grid-area: button;
     justify-self: flex-end;
+    @include screen1440px {
+      @include tabletButton;
+    }
   }
 }
