--- a/styles/modules/blocks/singUp/singUp.css
+++ b/styles/modules/blocks/singUp/singUp.css
@@ -4,6 +4,16 @@
   width: 100%;
   background-color: #DF2626;
 }
+@media (max-width: 1440px) {
+  .singUp {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+  }
+}
 .singUp__callToAction {
   margin: 0;
   padding: 0;
@@ -14,11 +24,26 @@
   align-content: center;
   width: 100%;
 }
+@media (max-width: 1440px) {
+  .singUp__callToAction {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+  }
+}
 .singUp__arrow {
   margin: 60px 50px 0 50px;
   padding: 0;
   width: 129px;
   height: 95px;
+}
+@media (max-width: 1440px) {
+  .singUp__arrow {
+    display: none;
+  }
 }
 .singUp__h2 {
   margin: 50px 0 120px 0;
@@ -28,6 +53,12 @@
   line-height: 120px;
   max-width: 685px;
   color: #FFFFFF;
+}
+@media (max-width: 1440px) {
+  .singUp__h2 {
+    max-width: 617px;
+    margin: 40px auto 60px 40px;
+  }
 }
 .singUp__inputs {
   margin: 0;
