--- a/styles/modules/blocks/singUp/singUp.scss
+++ b/styles/modules/blocks/singUp/singUp.scss
@@ -5,29 +5,44 @@
   @include MarginPadding;
   width: 100%;
   background-color: $redColor;
-  &__callToAction{
+  @include screen1440px {
+    @include tableSectionFlex;
+  }
+  &__callToAction {
     @include MarginPadding;
-    @include flex($direction: row, $justify: flex-start, $alignItems: flex-start);
+    @include flex(
+      $direction: row,
+      $justify: flex-start,
+      $alignItems: flex-start
+    );
     width: 100%;
-    
+    @include screen1440px {
+      @include tableSectionFlex;
+    }
   }
   &__arrow {
     @include MarginPadding($margin: 60px 50px 0 50px);
     width: 129px;
     height: 95px;
+    @include screen1440px {
+      display: none;
+    }
   }
   &__h2 {
     @include MarginPadding($margin: 50px 0 120px 0);
     @include fontRegular(120px, 120px);
     max-width: 685px;
     color: $whiteColor;
+    @include screen1440px {
+      @include tabletTitle;
+    }
   }
-  &__inputs{
+  &__inputs {
     @include MarginPadding;
     @include flex($direction: row, $alignItems: flex-start);
     width: 100%;
   }
-  &__input{
+  &__input {
     @include MarginPadding($margin: 0 0 86px 234px);
     padding-left: 20px;
     width: 348px;
@@ -48,7 +63,7 @@
   //   justify-self: flex-start;
   //   align-self: center;
   // }
-  &__button{
+  &__button {
     @include MarginPadding($margin: 0 auto 0 0);
     @include elementsNoStyles;
     @include fontRegular(14px, 24px);
@@ -59,7 +74,7 @@
     border-left: none;
     height: 50px;
   }
-  &__since{
+  &__since {
     @include MarginPadding($margin: 0 auto 50px 50px);
     @include fontRegular(15px, 24px);
     color: $whiteColor;
