--- a/styles/style.css
+++ b/styles/style.css
@@ -441,6 +441,7 @@
 @media (max-width: 1440px) {
   .camera__text {
     margin: 40px auto 40px 44px;
+    margin-bottom: 180px;
   }
 }
 .camera__foto {
@@ -468,11 +469,27 @@
   max-width: 526px;
   grid-area: feedback1;
 }
+@media (max-width: 1440px) {
+  .camera__feedbackText_1 {
+    max-width: 469px;
+    margin: 0 auto 60px 44px;
+    max-width: 526px;
+    margin-left: 40px;
+  }
+}
 .camera__feedbackText_2 {
   margin: 0 auto 60px 0;
   padding: 0;
   max-width: 497px;
   grid-area: feedback2;
+}
+@media (max-width: 1440px) {
+  .camera__feedbackText_2 {
+    max-width: 469px;
+    margin: 0 auto 60px 44px;
+    max-width: 526px;
+    margin-left: 40px;
+  }
 }
 .camera__feedbackName {
   margin: 0 0 10px 50px;
@@ -485,9 +502,23 @@
 .camera__feedbackName_1 {
   grid-area: name1;
 }
+@media (max-width: 1440px) {
+  .camera__feedbackName_1 {
+    max-width: 469px;
+    margin: 0 auto 60px 44px;
+    margin-bottom: 10px;
+  }
+}
 .camera__feedbackName_2 {
   margin-left: 0;
   grid-area: name2;
+}
+@media (max-width: 1440px) {
+  .camera__feedbackName_2 {
+    max-width: 469px;
+    margin: 0 auto 60px 44px;
+    margin-bottom: 10px;
+  }
 }
 .camera__feedbackMail {
   margin: 0 0 50px 50px;
@@ -500,9 +531,27 @@
 .camera__feedbackMail_1 {
   grid-area: mail1;
 }
+@media (max-width: 1440px) {
+  .camera__feedbackMail_1 {
+    max-width: 469px;
+    margin: 0 auto 60px 44px;
+    max-width: none;
+    width: calc(100% - 80px);
+    padding-bottom: 60px;
+    border-bottom: 1px solid #ffffff;
+  }
+}
 .camera__feedbackMail_2 {
   grid-area: mail2;
   margin-left: 0;
+}
+@media (max-width: 1440px) {
+  .camera__feedbackMail_2 {
+    max-width: 469px;
+    margin: 0 auto 60px 44px;
+    padding-bottom: 40px;
+    margin-bottom: 0;
+  }
 }
 
 .searchingOrders {
@@ -521,6 +570,7 @@
     align-items: center;
     align-content: center;
     width: 100%;
+    padding: 0;
   }
 }
 .searchingOrders__blockName {
@@ -581,6 +631,7 @@
   .searchingOrders__text {
     max-width: 469px;
     margin: 0 auto 60px 44px;
+    max-width: 380px;
   }
 }
 .searchingOrders__button {
@@ -682,6 +733,9 @@
   .singUp__h2 {
     max-width: 617px;
     margin: 40px auto 60px 40px;
+    font-size: 100px;
+    line-height: 100px;
+    max-width: 571px;
   }
 }
 .singUp__inputs {
@@ -711,6 +765,11 @@
   font-family: "Roboto_regular";
   font-size: 14px;
   line-height: 24px;
+}
+@media (max-width: 1440px) {
+  .singUp__input {
+    margin: 0 0 80px 40px;
+  }
 }
 .singUp__button {
   margin: 0 auto 0 0;
@@ -753,4 +812,10 @@
   font-size: 15px;
   line-height: 24px;
   color: #FFFFFF;
+}
+@media (max-width: 1440px) {
+  .singUp__since {
+    margin: 0 0 40px 40px;
+    align-self: flex-start;
+  }
 }/*# sourceMappingURL=style.css.map */
